--- a/css/styles.scss
+++ b/css/styles.scss
@@ -3,6 +3,43 @@
 
 $primary-color: red;
 
-h1 {
-  color: $primary-color;
+body {
+  margin: 0 auto;
+}
+
+/* ? Breakpoint for large screen */
+@media screen and (min-width: 1920px) {
+
+}
+
+/* ? Breakpoint for smaller desktop */
+@media screen and (max-width: 1400px) {
+
+}
+
+/* ? Breakpoint for mobile */
+@media screen and (max-width: 600px) {
+  body {
+      // width: 90%;
+  }
+
+  body h1 {
+    font-size: 36px;
+  }
+
+  body h2 {
+    font-size: 28px;
+  }
+
+  body h3 {
+    font-size: 24px;
+  }
+
+  body h4 {
+    font-size: 22px;
+  }
+
+  body h5, body p {
+    font-size: 20px;
+  }
 }
