--- a/css/index.scss
+++ b/css/index.scss
@@ -27,6 +27,7 @@ body{
   background-attachment: fixed;
   background-position: -100px -50px;
   background-repeat: no-repeat;
+  background-size: contain;
   backdrop-filter: blur(2.5px);
   padding-bottom: 20%;
 }
@@ -209,6 +210,26 @@ h1, h2, h3, h4, h5, p {
 
 /* ? Breakpoint for mobile */
 @media screen and (max-width: 600px) {
+  body h1 {
+    font-size: 36px;
+  }
+
+  body h2 {
+    font-size: 28px;
+  }
+
+  body h3 {
+    font-size: 24px;
+  }
+
+  body h4 {
+    font-size: 22px;
+  }
+
+  body h5, body p {
+    font-size: 20px;
+  }
+
   .intro-container .intro {
     margin-left: 20px;
     margin-right: 20px;
@@ -232,8 +253,4 @@ h1, h2, h3, h4, h5, p {
       display: none;
     }
   }
-}
-
-/* ? Breakpoint for smaller mobile */
-@media screen and (max-width: 600px) {
 }
