--- a/css/index.scss
+++ b/css/index.scss
@@ -27,9 +27,13 @@ body{
   background-attachment: fixed;
   background-position: -100px -50px;
   background-repeat: no-repeat;
-  background-size: contain;
   backdrop-filter: blur(2.5px);
   padding-bottom: 20%;
+
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  -o-background-size: contain;
+  background-size: contain;
 }
 
 h1 {
