--- a/css/index.scss
+++ b/css/index.scss
@@ -29,11 +29,7 @@ body{
   background-repeat: no-repeat;
   backdrop-filter: blur(2.5px);
   padding-bottom: 20%;
-
-  -webkit-background-size: contain;
-  -moz-background-size: contain;
-  -o-background-size: contain;
-  background-size: contain;
+  min-height: 100vh;
 }
 
 h1 {
