--- a/css/index.css
+++ b/css/index.css
@@ -90,9 +90,9 @@ h1, h2, h3, h4, h5, p {
   margin-left: auto;
   margin-right: auto;
   width: 70%;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 15px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   overflow: hidden;
+  border-radius: 15px;
 }
 .case-studies .card-container .ux-tag, .case-studies .card-container .product-tag, .case-studies .card-container .coding-tag {
   position: absolute;
@@ -112,12 +112,14 @@ h1, h2, h3, h4, h5, p {
   background-color: #F77F00;
 }
 .case-studies .card-container .image-poster {
+  border-radius: 15px 15px 0px 0px;
   filter: brightness(95%);
   transition: ease 0.5s;
 }
 .case-studies .card-container .description-container {
   backdrop-filter: blur(20px);
   padding: 20px 40px 20px 40px;
+  border-radius: 0px 0px 15px 15px;
 }
 .case-studies .card-container #ourdate-description {
   background: rgba(230, 244, 246, 0.95);
