--- a/css/index.scss
+++ b/css/index.scss
@@ -113,9 +113,9 @@ h1, h2, h3, h4, h5, p {
     margin-left: auto;
     margin-right: auto;
     width: 70%;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    border-radius: 15px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     overflow: hidden;
+    border-radius: 15px;
 
     .ux-tag, .product-tag, .coding-tag {
       position: absolute;
@@ -139,6 +139,7 @@ h1, h2, h3, h4, h5, p {
     }
 
     .image-poster {
+      border-radius: 15px 15px 0px 0px;
       filter: brightness(95%);
       transition: ease 0.5s;
     }
@@ -146,6 +147,7 @@ h1, h2, h3, h4, h5, p {
     .description-container {
       backdrop-filter: blur(20px);
       padding: 20px 40px 20px 40px;
+      border-radius: 0px 0px 15px 15px;
     }
     #ourdate-description {
       background: $ourdate-color;
