--- a/css/index.scss
+++ b/css/index.scss
@@ -250,26 +250,37 @@ h1, h2, h3, h4, h5, p {
     padding: 15px 25px 15px 25px;
   }
 
-  .card-container {
+  .case-studies .card-container {
     .ux-tag, .product-tag, .coding-tag {
       display: none;
     }
+
+    .image-poster {
+      filter: brightness(100%);
+    }
   }
 
-  #ourdate-description {
-    background: $ourdate-hovered;
+  .case-studies .card-container {
+    #ourdate-description {
+      background: $ourdate-hovered;
+    }
+    #mindfulmates-description {
+      background: $mindfulmates-hovered;
+    }
+    #mercular-description {
+      background: $mercular-hovered;
+    }
+    #beatbuddy-description {
+      background: $beatbuddy-hovered;
+      color: white;
+    }
+    #markthai-description {
+      background: $markthai-hovered;
+    }
   }
-  #mindfulmates-description {
-    background: $mindfulmates-hovered;
-  }
-  #mercular-description {
-    background: $mercular-hovered;
-  }
-  #beatbuddy-description {
-    background: $beatbuddy-hovered;
-    color: white;
-  }
-  #markthai-description {
-    background: $markthai-hovered;
+
+  .card-container:hover, .card-container:active {
+    width: 68%;
+    height: 68%;
   }
 }
