--- a/css/index.scss
+++ b/css/index.scss
@@ -279,8 +279,8 @@ h1, h2, h3, h4, h5, p {
     }
   }
 
-  .card-container:hover, .card-container:active {
-    width: 78%;
-    height: 78%;
+  body .card-container:hover, body .card-container:active {
+    width: 76%;
+    height: 76%;
   }
 }
