--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,6 @@ body {
   background-attachment: fixed;
   background-position: -100px -50px;
   background-repeat: no-repeat;
-  backdrop-filter: blur(2.5px);
   padding-bottom: 20%;
   min-height: 100vh;
 }
@@ -28,7 +27,7 @@ h5, p {
   font-size: 28px;
 }
 
-h1, h2, h3, h4, h5, p {
+h1, h2, h3, h4, h5, p, a {
   margin: 0;
   font-family: "Darker Grotesque", sans-serif;
   font-weight: 400;
@@ -61,12 +60,13 @@ h1, h2, h3, h4, h5, p {
 }
 
 .overlay {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(2.5px);
   z-index: -1;
 }
 
@@ -168,10 +168,8 @@ h1, h2, h3, h4, h5, p {
   background: #E5C445;
 }
 
-/* ? Breakpoint for large screen */
-/* ? Breakpoint for smaller desktop */
 /* ? Breakpoint for mobile */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
   body h1 {
     font-size: 36px;
   }
