--- a/css/index.scss
+++ b/css/index.scss
@@ -20,14 +20,11 @@ $beatbuddy-hovered: #333333;
 $markthai-color: rgba(242, 227, 170, 0.95);
 $markthai-hovered: #E5C445;
 
-
-
-body{
+body {
   background-image: url('../img/background3.svg');
   background-attachment: fixed;
   background-position: -100px -50px;
   background-repeat: no-repeat;
-  backdrop-filter: blur(2.5px);
   padding-bottom: 20%;
   min-height: 100vh;
 }
@@ -48,7 +45,7 @@ h5, p {
   font-size: 28px;
 }
 
-h1, h2, h3, h4, h5, p {
+h1, h2, h3, h4, h5, p, a {
   margin: 0;
   font-family: $home-page-font;
   font-weight: 400;
@@ -82,12 +79,13 @@ h1, h2, h3, h4, h5, p {
 }
 
 .overlay {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background: rgba(255, 255, 255, 0.50);
+  backdrop-filter: blur(2.5px);
   z-index: -1;
 }
 
@@ -201,17 +199,8 @@ h1, h2, h3, h4, h5, p {
   }
 }
 
-/* ? Breakpoint for large screen */
-@media screen and (min-width: 1920px) {
-}
-
-/* ? Breakpoint for smaller desktop */
-@media screen and (max-width: 1400px) {
-
-}
-
 /* ? Breakpoint for mobile */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
   body h1 {
     font-size: 36px;
   }
