--- a/css/navbar.css
+++ b/css/navbar.css
@@ -2,6 +2,7 @@
   background-color: rgba(255, 255, 255, 0.01);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
   color: #19261D;
   font-size: 36px;
   position: fixed;
