--- a/css/navbar.scss
+++ b/css/navbar.scss
@@ -7,6 +7,7 @@ $mobile-background-color: rgba(252, 223, 164, 0.40);
   background-color: rgba(255, 255, 255, 0.01);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
   color: $nav-text-color;
   font-size: 36px;
   position: fixed;
