--- a/css/navbar.scss
+++ b/css/navbar.scss
@@ -8,10 +8,12 @@ $mobile-background-color: rgba(252, 223, 164, 0.40);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(20px);
   -webkit-backdrop-filter: blur(20px);
+  height: 1px;
+  bottom: -1px;
   color: $nav-text-color;
   font-size: 36px;
   position: fixed;
-  z-index: 1;
+  z-index: 9;
   width: 100%;
 
   .navbar {
