--- a/css/index.scss
+++ b/css/index.scss
@@ -171,8 +171,8 @@ h1, h2, h3, h4, h5, p, a {
   cursor: pointer;
   width: 68%;
   height: 68%;
-  transform: rotateX(10deg);
-  transform: rotateY(1deg);
+  // transform: rotateX(10deg);
+  // transform: rotateY(1deg);
 
   .image-poster {
     filter: brightness(100%);
