--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,12 +1,16 @@
+:root {
+  --navbar-background-color: rgba(255, 255, 255, 0.01);
+}
+
 #nav-menu {
-  background-color: rgba(255, 255, 255, 0.01);
+  background-color: var(--navbar-background-color);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(20px);
   -webkit-backdrop-filter: blur(20px);
   color: #19261D;
   font-size: 36px;
   position: fixed;
-  z-index: 1;
+  z-index: 10;
   width: 100%;
 }
 #nav-menu .navbar {
