--- a/css/navbar.scss
+++ b/css/navbar.scss
@@ -3,17 +3,19 @@ $nav-text-hovered: #3A5944;
 
 $mobile-background-color: rgba(252, 223, 164, 0.40);
 
+:root {
+  --navbar-background-color: rgba(255, 255, 255, 0.01);
+}
+
 #nav-menu {
-  background-color: rgba(255, 255, 255, 0.01);
+  background-color: var(--navbar-background-color);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(20px);
   -webkit-backdrop-filter: blur(20px);
-  height: 1px;
-  bottom: -1px;
   color: $nav-text-color;
   font-size: 36px;
   position: fixed;
-  z-index: 9;
+  z-index: 10;
   width: 100%;
 
   .navbar {
