fixing safari issues

--- a/css/index.scss
+++ b/css/index.scss
@@ -173,6 +173,7 @@ h1, h2, h3, h4, h5, p, a {
   height: 68%;
   // transform: rotateX(10deg);
   // transform: rotateY(1deg);
+  transform: translateZ(0);
 
   .image-poster {
     filter: brightness(100%);
