--- a/css/index.scss
+++ b/css/index.scss
@@ -174,6 +174,7 @@ h1, h2, h3, h4, h5, p, a {
   // transform: rotateX(10deg);
   // transform: rotateY(1deg);
   transform: translateZ(0);
+  will-change: height;
 
   .image-poster {
     filter: brightness(100%);
