--- a/css/index.scss
+++ b/css/index.scss
@@ -169,12 +169,9 @@ h1, h2, h3, h4, h5, p, a {
 
 .card-container:hover {
   cursor: pointer;
-  width: 68%;
-  height: 68%;
-  // transform: rotateX(10deg);
-  // transform: rotateY(1deg);
-  transform: translateZ(0);
-  will-change: height;
+  // width: 68%;
+  // height: 68%;
+  transform: scale(0.95);
 
   .image-poster {
     filter: brightness(100%);
