--- a/css/index.css
+++ b/css/index.css
@@ -219,8 +219,7 @@ h1, h2, h3, h4, h5, p, a {
     background: #E5C445;
   }
   body .card-container:hover, body .card-container:active {
-    width: 76%;
-    height: 76%;
+    transform: scale(0.95);
   }
 }
 
