--- a/css/index.scss
+++ b/css/index.scss
@@ -25,8 +25,14 @@ body {
   background-attachment: fixed;
   background-position: -100px -50px;
   background-repeat: no-repeat;
-  padding-bottom: 20%;
+  padding-bottom: 10%;
   min-height: 100vh;
+}
+
+footer h4 {
+  position: sticky;
+  text-align: center;
+  margin-top: 7%;
 }
 
 h1 {
@@ -86,6 +92,7 @@ h1, h2, h3, h4, h5, p, a {
   height: 100%;
   background: rgba(255, 255, 255, 0.50);
   backdrop-filter: blur(2.5px);
+  transition: 0.3s;
   z-index: -1;
 }
 
@@ -138,7 +145,7 @@ h1, h2, h3, h4, h5, p, a {
 
     .image-poster {
       border-radius: 15px 15px 0px 0px;
-      filter: brightness(95%);
+      // filter: brightness(95%);
       transition: ease 0.5s;
     }
 
@@ -174,7 +181,7 @@ h1, h2, h3, h4, h5, p, a {
   transform: scale(0.95);
 
   .image-poster {
-    filter: brightness(100%);
+    // filter: brightness(100%);
   }
 
   .description-container {
@@ -244,7 +251,7 @@ h1, h2, h3, h4, h5, p, a {
     }
 
     .image-poster {
-      filter: brightness(100%);
+      // filter: brightness(100%);
     }
   }
 
