--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,7 @@ body {
 footer h4 {
   position: sticky;
   text-align: center;
-  margin-top: 7%;
+  margin-top: 10%;
 }
 
 h1 {
@@ -72,7 +72,7 @@ h1, h2, h3, h4, h5, p, a {
   width: 100%;
   height: 100%;
   background: rgba(255, 255, 255, 0.5);
-  backdrop-filter: blur(2.5px);
+  backdrop-filter: blur(1px);
   transition: 0.3s;
   z-index: -1;
 }
@@ -148,24 +148,25 @@ h1, h2, h3, h4, h5, p, a {
   cursor: pointer;
   transform: scale(0.95);
 }
-.card-container:hover .description-container {
-  backdrop-filter: blur(100px);
-  transition: ease 0.5s;
-}
 .card-container:hover #ourdate-description {
   background: #B8E0E5;
+  transition: 0.5s;
 }
 .card-container:hover #mindfulmates-description {
   background: #9DD4F2;
+  transition: 0.5s;
 }
 .card-container:hover #mercular-description {
   background: #BBE1F2;
+  transition: 0.5s;
 }
 .card-container:hover #beatbuddy-description {
   background: #333333;
+  transition: 0.5s;
 }
 .card-container:hover #markthai-description {
   background: #E5C445;
+  transition: 0.5s;
 }
 
 /* ? Breakpoint for mobile */
@@ -217,9 +218,6 @@ h1, h2, h3, h4, h5, p, a {
   }
   .case-studies .card-container #markthai-description {
     background: #E5C445;
-  }
-  body .card-container:hover, body .card-container:active {
-    transform: scale(0.95);
   }
 }
 
