--- a/css/index.scss
+++ b/css/index.scss
@@ -32,7 +32,7 @@ body {
 footer h4 {
   position: sticky;
   text-align: center;
-  margin-top: 7%;
+  margin-top: 10%;
 }
 
 h1 {
@@ -91,7 +91,7 @@ h1, h2, h3, h4, h5, p, a {
   width: 100%;
   height: 100%;
   background: rgba(255, 255, 255, 0.50);
-  backdrop-filter: blur(2.5px);
+  backdrop-filter: blur(1px);
   transition: 0.3s;
   z-index: -1;
 }
@@ -176,32 +176,28 @@ h1, h2, h3, h4, h5, p, a {
 
 .card-container:hover {
   cursor: pointer;
-  // width: 68%;
-  // height: 68%;
+  // transform: scale3d(0.95, 0.95, 1);
   transform: scale(0.95);
 
-  .image-poster {
-    // filter: brightness(100%);
-  }
-
-  .description-container {
-    backdrop-filter: blur(100px);
-    transition: ease 0.5s;
-  }
   #ourdate-description {
     background: $ourdate-hovered;
+    transition: 0.5s;
   }
   #mindfulmates-description {
     background: $mindfulmates-hovered;
+    transition: 0.5s;
   }
   #mercular-description {
     background: $mercular-hovered;
+    transition: 0.5s;
   }
   #beatbuddy-description {
     background: $beatbuddy-hovered;
+    transition: 0.5s;
   }
   #markthai-description {
     background: $markthai-hovered;
+    transition: 0.5s;
   }
 }
 
@@ -272,9 +268,5 @@ h1, h2, h3, h4, h5, p, a {
     #markthai-description {
       background: $markthai-hovered;
     }
-  }
-
-  body .card-container:hover, body .card-container:active {
-    transform: scale(0.95);
   }
 }
