--- a/css/layout.scss
+++ b/css/layout.scss
@@ -1,19 +1,15 @@
 .hide {
   opacity: 0;
-  filter: blur(5px);
   transform: translateY(-10%);
-  transition: all 0.2s;
 }
 
 .hide-long {
   opacity: 0;
-  filter: blur(5px);
   transform: translateY(-10%);
   transition: all 1s;
 }
 
 .show {
   opacity: 1;
-  filter: blur(0);
-  transform: translateY(0);
+  transform: translateY(0%);
 }
