--- a/css/index.scss
+++ b/css/index.scss
@@ -84,17 +84,17 @@ h1, h2, h3, h4, h5, p, a {
   }
 }
 
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(255, 255, 255, 0.50);
-  backdrop-filter: blur(1px);
-  transition: 0.3s;
-  z-index: -1;
-}
+// .overlay {
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   background: rgba(255, 255, 255, 0.50);
+//   backdrop-filter: blur(1px);
+//   transition: 0.3s;
+//   z-index: -1;
+// }
 
 .case-studies {
   margin-top: 10%;
