--- a/css/layout.scss
+++ b/css/layout.scss
@@ -1,15 +1,43 @@
-.hide {
-  opacity: 0;
-  transform: translateY(-10%);
-}
+// layout.scss controls all of the scrolling animation behavior
+/* ? Breakpoint for mobile */
+@media screen and (min-width: 700px) {
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.50);
+    backdrop-filter: blur(1px);
+    transition: 0.3s;
+    z-index: -1;
+  }
 
-.hide-long {
-  opacity: 0;
-  transform: translateY(-10%);
-  transition: all 1s;
-}
+  .hide {
+    opacity: 0;
+    transform: translateY(-10%);
+  }
 
-.show {
-  opacity: 1;
-  transform: translateY(0%);
+  .hide-long {
+    opacity: 0;
+    transform: translateY(-10%);
+    transition: all 1s;
+  }
+
+  .img-stack:nth-child(0) {
+    transition-delay: 100ms;
+  }
+
+  .img-stack:nth-child(1) {
+    transition-delay: 200ms;
+  }
+
+  .img-stack:nth-child(2) {
+    transition-delay: 300ms;
+  }
+
+  .show {
+    opacity: 1;
+    transform: translateY(0%);
+  }
 }
