--- a/css/about.css
+++ b/css/about.css
@@ -29,8 +29,108 @@
   object-fit: cover;
 }
 
-.about-me, img {
+.about-me, .picture img, .carousel img {
   border-radius: 10px;
+}
+
+.mobile-container {
+  position: relative;
+  margin: 0;
+}
+
+.carousel-wrapper {
+  overflow: hidden;
+  width: 70%;
+  box-sizing: border-box;
+  margin-left: auto;
+  margin-right: auto;
+  position: static;
+}
+.carousel-wrapper .carousel {
+  transform-style: preserve-3d;
+}
+.carousel-wrapper .carousel-photo {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  margin: auto;
+  padding: 0;
+  z-index: 100;
+  transition: all 1s;
+}
+.carousel-wrapper .carousel-photo.initial, .carousel-wrapper .carousel-photo.active {
+  opacity: 1;
+  position: relative;
+  z-index: 900;
+  transition: all 1s;
+}
+.carousel-wrapper .carousel-photo.prev, .carousel-wrapper .carousel-photo.next {
+  z-index: 800;
+}
+.carousel-wrapper .carousel-photo.prev {
+  transform: translateX(-100%);
+}
+.carousel-wrapper .carousel-photo.next {
+  transform: translateX(100%);
+}
+.carousel-wrapper .indicator-container {
+  display: flex;
+  justify-content: center;
+  column-gap: 1em;
+  position: absolute;
+  bottom: 1em;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 1001;
+}
+.carousel-wrapper .indicator {
+  border-radius: 50%;
+  border: 1px solid #FFF;
+  background: white;
+  width: 1em;
+  height: 1em;
+  margin: 0;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  transition: all 1s;
+}
+.carousel-wrapper .indicator.initial, .carousel-wrapper .indicator.active {
+  background: #9E2A2B;
+}
+.carousel-wrapper .carousel-button-prev, .carousel-wrapper .carousel-button-next {
+  position: absolute;
+  top: 50%;
+  width: 2.5em;
+  height: 2.5em;
+  background-color: #9E2A2B;
+  transform: translateY(-50%);
+  border-radius: 50%;
+  cursor: pointer;
+  z-index: 1001;
+  border: 1px solid white;
+}
+.carousel-wrapper .carousel-button-prev {
+  left: 5%;
+}
+.carousel-wrapper .carousel-button-next {
+  right: 5%;
+}
+.carousel-wrapper .carousel-button-prev::after, .carousel-wrapper .carousel-button-next::after {
+  content: " ";
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  top: 50%;
+  left: 54%;
+  border-right: 2px solid white;
+  border-bottom: 2px solid white;
+  transform: translate(-50%, -50%) rotate(135deg);
+}
+.carousel-wrapper .carousel-button-next::after {
+  left: 47%;
+  transform: translate(-50%, -50%) rotate(-45deg);
 }
 
 /*# sourceMappingURL=about.css.map */
