--- a/css/about.scss
+++ b/css/about.scss
@@ -35,6 +35,123 @@
   }
 }
 
-.about-me, img {
+.about-me, .picture img, .carousel img {
   border-radius: 10px;
+}
+
+.mobile-container {
+  position: relative;
+  margin: 0;
+}
+
+.carousel-wrapper {
+  overflow: hidden;
+  width: 70%;
+  // Need border-box so that any padding or borders are included in carousel-wrapper's width and height
+  box-sizing: border-box;
+  margin-left: auto;
+  margin-right: auto;
+  position: static;
+
+  .carousel {
+    transform-style: preserve-3d;
+  }
+
+  .carousel-photo {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    margin: auto;
+    padding: 0;
+    z-index: 100;
+    transition: all 1s;
+  }
+
+  .carousel-photo.initial, .carousel-photo.active {
+    opacity: 1;
+    position: relative;
+    z-index: 900;
+    transition: all 1s;
+  }
+
+  .carousel-photo.prev, .carousel-photo.next {
+    z-index: 800;
+  }
+
+  .carousel-photo.prev {
+    // Move 'prev' item to the left.
+    transform: translateX(-100%);
+  }
+
+  .carousel-photo.next {
+    // Move 'next' item to the right.
+    transform: translateX(100%);
+  }
+
+  .indicator-container {
+    display: flex;
+    justify-content: center;
+    column-gap: 1em;
+    position: absolute;
+    bottom: 1em;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-left: auto;
+    margin-right: auto;
+    z-index: 1001;
+  }
+
+  .indicator {
+    border-radius: 50%;
+    border: 1px solid #FFF;
+    background: white;
+    width: 1em;
+    height: 1em;
+    // top, right, bottom, left
+    margin: 0;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    transition: all 1s;
+  }
+
+  .indicator.initial, .indicator.active {
+    background: #9E2A2B;
+  }
+
+  .carousel-button-prev, .carousel-button-next {
+    position: absolute;
+    top: 50%;
+    width: 2.5em;
+    height: 2.5em;
+    background-color: #9E2A2B;
+    transform: translateY(-50%);
+    border-radius: 50%;
+    cursor: pointer;
+    z-index: 1001;
+    border: 1px solid white;
+  }
+
+  .carousel-button-prev {
+    left: 5%;
+  }
+  .carousel-button-next {
+    right: 5%;
+  }
+
+  .carousel-button-prev::after, .carousel-button-next::after {
+    content: " ";
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    top: 50%;
+    left: 54%;
+    border-right: 2px solid white;
+    border-bottom: 2px solid white;
+    transform: translate(-50%, -50%) rotate(135deg);
+  }
+
+  .carousel-button-next::after {
+    left: 47%;
+    transform: translate(-50%, -50%) rotate(-45deg);
+  }
 }
