--- a/css/about.css
+++ b/css/about.css
@@ -1,5 +1,5 @@
 .grid-container {
-  padding-top: 15em;
+  padding-top: 10em;
   display: grid;
   grid-template-columns: 30% 70%;
   grid-auto-rows: 1fr;
@@ -33,23 +33,49 @@
   border-radius: 10px;
 }
 
-.mobile-container {
-  position: relative;
-  margin: 0;
+/* ? Breakpoint for mobile */
+@media screen and (max-width: 900px) {
+  body .mobile-container {
+    display: block;
+  }
+  body .grid-container {
+    display: none;
+  }
+}
+.background-wrapper {
+  padding-top: 10em;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
-.carousel-wrapper {
+.mobile-container {
+  display: none;
+  padding: 1em;
+  position: relative;
+  background-color: aliceblue;
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.95);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+.mobile-container h1 {
+  text-align: center;
+  margin-top: 0.5em;
+}
+.mobile-container h4 {
+  margin-top: 1em;
+}
+.mobile-container .carousel-wrapper {
   overflow: hidden;
-  width: 70%;
+  width: 90%;
   box-sizing: border-box;
   margin-left: auto;
   margin-right: auto;
   position: static;
 }
-.carousel-wrapper .carousel {
+.mobile-container .carousel-wrapper .carousel {
   transform-style: preserve-3d;
 }
-.carousel-wrapper .carousel-photo {
+.mobile-container .carousel-wrapper .carousel-photo {
   opacity: 0;
   position: absolute;
   top: 0;
@@ -59,22 +85,21 @@
   z-index: 100;
   transition: all 1s;
 }
-.carousel-wrapper .carousel-photo.initial, .carousel-wrapper .carousel-photo.active {
+.mobile-container .carousel-wrapper .carousel-photo.initial, .mobile-container .carousel-wrapper .carousel-photo.active {
   opacity: 1;
   position: relative;
   z-index: 900;
-  transition: all 1s;
 }
-.carousel-wrapper .carousel-photo.prev, .carousel-wrapper .carousel-photo.next {
+.mobile-container .carousel-wrapper .carousel-photo.prev, .mobile-container .carousel-wrapper .carousel-photo.next {
   z-index: 800;
 }
-.carousel-wrapper .carousel-photo.prev {
+.mobile-container .carousel-wrapper .carousel-photo.prev {
   transform: translateX(-100%);
 }
-.carousel-wrapper .carousel-photo.next {
+.mobile-container .carousel-wrapper .carousel-photo.next {
   transform: translateX(100%);
 }
-.carousel-wrapper .indicator-container {
+.mobile-container .carousel-wrapper .indicator-container {
   display: flex;
   justify-content: center;
   column-gap: 1em;
@@ -86,7 +111,7 @@
   margin-right: auto;
   z-index: 1001;
 }
-.carousel-wrapper .indicator {
+.mobile-container .carousel-wrapper .indicator {
   border-radius: 50%;
   border: 1px solid #FFF;
   background: white;
@@ -96,10 +121,10 @@
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   transition: all 1s;
 }
-.carousel-wrapper .indicator.initial, .carousel-wrapper .indicator.active {
+.mobile-container .carousel-wrapper .indicator.initial, .mobile-container .carousel-wrapper .indicator.active {
   background: #9E2A2B;
 }
-.carousel-wrapper .carousel-button-prev, .carousel-wrapper .carousel-button-next {
+.mobile-container .carousel-wrapper .carousel-button-prev, .mobile-container .carousel-wrapper .carousel-button-next {
   position: absolute;
   top: 50%;
   width: 2.5em;
@@ -111,13 +136,13 @@
   z-index: 1001;
   border: 1px solid white;
 }
-.carousel-wrapper .carousel-button-prev {
+.mobile-container .carousel-wrapper .carousel-button-prev {
   left: 5%;
 }
-.carousel-wrapper .carousel-button-next {
+.mobile-container .carousel-wrapper .carousel-button-next {
   right: 5%;
 }
-.carousel-wrapper .carousel-button-prev::after, .carousel-wrapper .carousel-button-next::after {
+.mobile-container .carousel-wrapper .carousel-button-prev::after, .mobile-container .carousel-wrapper .carousel-button-next::after {
   content: " ";
   position: absolute;
   width: 10px;
@@ -128,7 +153,7 @@
   border-bottom: 2px solid white;
   transform: translate(-50%, -50%) rotate(135deg);
 }
-.carousel-wrapper .carousel-button-next::after {
+.mobile-container .carousel-wrapper .carousel-button-next::after {
   left: 47%;
   transform: translate(-50%, -50%) rotate(-45deg);
 }
