fixed carousel animation in safari yay

--- a/css/about.css
+++ b/css/about.css
@@ -70,9 +70,9 @@
   box-sizing: border-box;
   margin-left: auto;
   margin-right: auto;
-  position: static;
 }
 .mobile-container .carousel-wrapper .carousel {
+  overflow: hidden;
   transform-style: preserve-3d;
 }
 .mobile-container .carousel-wrapper .carousel-photo {
@@ -89,6 +89,8 @@
   opacity: 1;
   position: relative;
   z-index: 900;
+  transition: all 1s;
+  transform: translateZ(0);
 }
 .mobile-container .carousel-wrapper .carousel-photo.prev, .mobile-container .carousel-wrapper .carousel-photo.next {
   z-index: 800;
