--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,7 +1,5 @@
 :root {
   --navbar-background-color: rgba(255, 255, 255, 0.01);
-  --navbar-text-color: #19261D;
-  --navbar-text-hover-color: #548C66;
 }
 
 #nav-menu {
@@ -9,16 +7,21 @@
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(20px);
   -webkit-backdrop-filter: blur(20px);
-  color: var(--navbar-text-color);
-  font-size: 36px;
+  color: #19261D;
+  font-size: 32px;
   position: fixed;
   z-index: 10;
   width: 100%;
+  font-family: "Darker Grotesque", sans-serif;
+  padding: 0.7em;
 }
 #nav-menu .navbar {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+#nav-menu .navbar .nav-links {
+  margin: 0;
 }
 #nav-menu .navbar-mobile ul {
   margin-top: 0;
@@ -51,7 +54,7 @@
   list-style: none;
 }
 #nav-menu .menu li:hover, #nav-menu .navbar-mobile li:hover {
-  color: var(--navbar-text-hover-color);
+  color: #3A5944;
   transition: ease 0.5s;
 }
 
