--- a/css/layout.scss
+++ b/css/layout.scss
@@ -16,12 +16,18 @@
   .hide {
     opacity: 0;
     transform: translateY(-10%);
+    transition: all 0.5s;
   }
 
   .hide-long {
     opacity: 0;
     transform: translateY(-10%);
     transition: all 1s;
+  }
+
+  .show {
+    opacity: 1;
+    transform: translateY(0%);
   }
 
   .img-stack:nth-child(0) {
@@ -34,10 +40,5 @@
 
   .img-stack:nth-child(2) {
     transition-delay: 300ms;
-  }
-
-  .show {
-    opacity: 1;
-    transform: translateY(0%);
   }
 }
