--- a/css/case-study.css
+++ b/css/case-study.css
@@ -11,15 +11,18 @@
   list-style-type: disc; /* To use disc bullets for unordered lists (default) */
 }
 
-.content-container-2 {
+.content-container-v2 {
   padding: 5% 10% 5% 10%;
-  background-color: #E6F4F6;
 }
-.content-container-2 #old-profile {
+.content-container-v2 #old-profile {
   filter: drop-shadow(0px 8px 8px rgba(24, 39, 75, 0.08)) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   margin: 5% auto 5% auto;
   display: block;
   width: 300px;
+}
+
+.blue-background {
+  background-color: #E6F4F6;
 }
 
 body h2 {
@@ -42,8 +45,11 @@ body h3, .content-container ul, .content-container ol, .feature-text {
 }
 
 .header-img {
-  width: 100%;
   padding-top: 5rem;
+}
+
+.header-img, #new-profile {
+  width: 100%;
 }
 
 .section {
@@ -64,19 +70,30 @@ body h3, .content-container ul, .content-container ol, .feature-text {
   grid-template-columns: 40% 60%;
 }
 
+.video-container {
+  display: grid;
+  align-items: center;
+  grid-template-columns: 60% 40%;
+  column-gap: 3em;
+}
+.video-container video {
+  width: 100%;
+  height: 100%;
+}
+
 /* ? Breakpoint for mobile */
 @media screen and (max-width: 700px) {
   .two-column {
     grid-template-columns: 1fr;
   }
   body h2 {
-    font-size: 18px;
+    font-size: 20px;
   }
   body h3, .content-container ul, .content-container ol {
-    font-size: 16px;
+    font-size: 22px;
   }
   .feature-text {
-    font-size: 14px;
+    font-size: 16px;
   }
   .content-container-2 #old-profile {
     width: 150px;
