--- a/css/case-study.scss
+++ b/css/case-study.scss
@@ -15,9 +15,8 @@ $h3-font: 'Darker Grotesque', sans-serif;
   }
 }
 
-.content-container-2 {
+.content-container-v2 {
   padding: 5% 10% 5% 10%;
-  background-color: #E6F4F6;;
 
   #old-profile {
     filter: drop-shadow(0px 8px 8px rgba(24, 39, 75, 0.08)) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
@@ -25,6 +24,10 @@ $h3-font: 'Darker Grotesque', sans-serif;
     display: block;
     width: 300px;
   }
+}
+
+.blue-background {
+  background-color: #E6F4F6;
 }
 
 body h2 {
@@ -47,8 +50,11 @@ body h3, .content-container ul, .content-container ol, .feature-text {
 }
 
 .header-img {
-  width: 100%;
   padding-top: 5rem;
+}
+
+.header-img, #new-profile {
+  width: 100%;
 }
 
 .section {
@@ -72,6 +78,18 @@ body h3, .content-container ul, .content-container ol, .feature-text {
   grid-template-columns: 40% 60%;
 }
 
+.video-container {
+  display: grid;
+  align-items: center;
+  grid-template-columns: 60% 40%;
+  column-gap: 3em;
+
+  video {
+    width: 100%;
+    height: 100%;
+  }
+}
+
 /* ? Breakpoint for mobile */
 @media screen and (max-width: 700px) {
 
@@ -80,15 +98,15 @@ body h3, .content-container ul, .content-container ol, .feature-text {
   }
 
   body h2 {
-    font-size: 18px;
+    font-size: 20px;
   }
 
   body h3, .content-container ul, .content-container ol {
-    font-size: 16px;
+    font-size: 22px;
   }
 
   .feature-text {
-    font-size: 14px;
+    font-size: 16px;
   }
 
 
