--- a/css/navbar.css
+++ b/css/navbar.css
@@ -37,7 +37,7 @@
   padding: 0 6vw 0 6vw;
 }
 #nav-menu .navbar-top-mobile {
-  padding: 6vw;
+  padding: 4vw 6vw 4vw 6vw;
 }
 #nav-menu a {
   font-weight: 300;
@@ -62,6 +62,7 @@
 @media screen and (max-width: 900px) {
   #nav-menu {
     font-size: 28px;
+    padding: 0;
   }
   #nav-menu .navbar {
     display: none;
