--- a/css/case-study.scss
+++ b/css/case-study.scss
@@ -15,6 +15,18 @@ $h3-font: 'Darker Grotesque', sans-serif;
   }
 }
 
+footer h4 {
+  position: sticky;
+  text-align: center;
+  margin-top: 5%;
+  font-family: $h3-font;
+  font-size: 32px;
+}
+
+body {
+  padding-bottom: 10%;
+}
+
 .content-container-v2 {
   padding: 5% 10% 5% 10%;
 
@@ -36,7 +48,8 @@ body h2 {
   color: #363636;
 }
 
-body h3, .content-container ul, .content-container ol {
+body h3, .content-container ul, .content-container ol,
+.content-container-v2 ul, .content-container-v2 ol {
   font-size: 28px;
   color: #333333;
 }
@@ -45,7 +58,8 @@ body h3, .content-container ul, .content-container ol {
   font-size: 24px;
 }
 
-body h3, .content-container ul, .content-container ol, .feature-text {
+body h3, .content-container ul, .content-container ol, .feature-text,
+.content-container-v2 ul, .content-container-v2 ol {
   font-family: $h3-font;
 }
 
@@ -93,8 +107,13 @@ body h3, .content-container ul, .content-container ol, .feature-text {
 /* ? Breakpoint for mobile */
 @media screen and (max-width: 700px) {
 
+  .section {
+    margin-top: 20%;
+  }
+
   .two-column, .video-container {
     grid-template-columns: 1fr;
+    row-gap: 0.5em;
   }
 
   body h2 {
@@ -109,9 +128,16 @@ body h3, .content-container ul, .content-container ol, .feature-text {
     font-size: 16px;
   }
 
+  .content-container, .content-container-v2 {
+    padding: 10%;
+  }
 
   .content-container-v2 #old-profile {
     width: 150px;
+  }
+
+  footer h4 {
+    font-size: 22px;
   }
 
 }
