--- a/css/case-study.scss
+++ b/css/case-study.scss
@@ -1,6 +1,10 @@
 $h2-font: 'Alata', sans-serif;
 $h3-font: 'Darker Grotesque', sans-serif;
 
+body {
+  padding-bottom: 10%;
+}
+
 .content-container {
   padding: 5% 10% 5% 10%;
 
@@ -23,10 +27,6 @@ footer h4 {
   font-size: 32px;
 }
 
-body {
-  padding-bottom: 10%;
-}
-
 .content-container-v2 {
   padding: 5% 10% 5% 10%;
 
@@ -36,10 +36,28 @@ body {
     display: block;
     width: 300px;
   }
+
+  img.arrow-down {
+    margin-top: 5em;
+    animation: downUp 3s ease-in-out infinite;
+  }
+}
+
+@keyframes downUp {
+  0%, 100% {
+    transform: translateY(0); /* Starting position */
+  }
+  50% {
+    transform: translateY(50px); /* Move down by 50px */
+  }
 }
 
 .blue-background {
   background-color: #E6F4F6;
+}
+
+.mercular-blue-background {
+  background-color: #F3FCFF;
 }
 
 body h2 {
@@ -102,6 +120,14 @@ body h3, .content-container ul, .content-container ol, .feature-text,
     width: 100%;
     height: 100%;
   }
+}
+
+section img {
+  padding: 0;
+  display: block;
+  margin: 0 auto;
+  max-height: 100%;
+  max-width: 100%;
 }
 
 /* ? Breakpoint for mobile */
