--- a/css/case-study.css
+++ b/css/case-study.css
@@ -100,6 +100,33 @@ body h3, .content-container ul, .content-container ol, .feature-text,
   grid-template-columns: 40% 60%;
 }
 
+.grid-logo {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-top: 20px;
+}
+.grid-logo img {
+  max-width: 80%;
+}
+
+.title {
+  max-width: 100%;
+}
+
+.logo-container {
+  margin-top: 10%;
+  margin-bottom: 10%;
+  padding-right: 3em;
+}
+.logo-container .flex-logo {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 50px;
+}
+.logo-container img {
+  width: 80%;
+}
+
 .video-container {
   display: grid;
   align-items: center;
