--- a/css/case-study.css
+++ b/css/case-study.css
@@ -2,16 +2,16 @@ body {
   padding-bottom: 10%;
 }
 
-.content-container {
+.content-container, .content-container-v2 {
   padding: 5% 10% 5% 10%;
 }
-.content-container ul li:nth-child(n+2), .content-container ol li:nth-child(n+2) {
+.content-container ul li:nth-child(n+2), .content-container ol li:nth-child(n+2), .content-container-v2 ul li:nth-child(n+2), .content-container-v2 ol li:nth-child(n+2) {
   margin-top: 15px;
 }
-.content-container ol {
+.content-container ol, .content-container-v2 ol {
   list-style-type: decimal; /* To use decimal numbers as list markers (1, 2, 3, ...) */
 }
-.content-container ul {
+.content-container ul, .content-container-v2 ul {
   list-style-type: disc; /* To use disc bullets for unordered lists (default) */
 }
 
@@ -23,9 +23,6 @@ footer h4 {
   font-size: 32px;
 }
 
-.content-container-v2 {
-  padding: 5% 10% 5% 10%;
-}
 .content-container-v2 #old-profile {
   filter: drop-shadow(0px 8px 8px rgba(24, 39, 75, 0.08)) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   margin: 5% auto 5% auto;
@@ -70,7 +67,7 @@ body h3, .content-container ul, .content-container ol,
 }
 
 body h3, .content-container ul, .content-container ol, .feature-text,
-.content-container-v2 ul, .content-container-v2 ol {
+.content-container-v2 ul, .content-container-v2 ol, .persona-button {
   font-family: "Darker Grotesque", sans-serif;
 }
 
@@ -146,6 +143,51 @@ section img {
   max-width: 100%;
 }
 
+.persona-btn-container {
+  display: block;
+  text-align: center;
+}
+
+.persona-button {
+  text-align: center;
+  border: none;
+  background-color: #5fc5ff;
+  padding: 20px 30px 20px 30px;
+  text-decoration: none;
+  color: white;
+  font-size: 28px;
+  border-radius: 12px;
+}
+
+.persona-button:hover {
+  background-color: #56B1E5;
+  transition: all 0.5s;
+}
+
+body .prototype-photos {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+body .prototype-photos img {
+  height: 30%;
+  width: 30%;
+}
+
+.robot-pict-container {
+  display: flex;
+  flex-direction: column;
+  row-gap: 30px;
+}
+.robot-pict-container img {
+  width: 80%;
+  height: 80%;
+}
+.robot-pict-container .take-time-off {
+  width: 60%;
+  height: 60%;
+}
+
 /* ? Breakpoint for mobile */
 @media screen and (max-width: 700px) {
   .section {
@@ -158,7 +200,7 @@ section img {
   body h2 {
     font-size: 20px;
   }
-  body h3, .content-container ul, .content-container ol {
+  body h3, .content-container ul, .content-container ol, .persona-button {
     font-size: 22px;
   }
   .feature-text {
