--- a/css/case-study.scss
+++ b/css/case-study.scss
@@ -230,7 +230,7 @@ body .prototype-photos {
     font-size: 20px;
   }
 
-  body h3, .content-container ul, .content-container ol, .persona-button {
+  body h3, .content-container ul, .content-container ol, .content-container-v2 ul, .content-container-v2 ol, .persona-button {
     font-size: 22px;
   }
 
