--- a/css/layout.css
+++ b/css/layout.css
@@ -8,7 +8,7 @@
     height: 100%;
     background: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(1px);
-    transition: 0.3s;
+    transition: ease 1s;
     z-index: -1;
   }
   .hide {
