--- a/css/index.scss
+++ b/css/index.scss
@@ -14,8 +14,8 @@ $mindfulmates-hovered: #9DD4F2;
 $mercular-color: rgba(242, 251, 255, 0.95);
 $mercular-hovered: #BBE1F2;
 
-$beatbuddy-color: rgba(75, 75, 75, 0.90);
-$beatbuddy-hovered: #333333;
+$beatbuddy-color: rgba(32, 61, 88, 0.9);
+$beatbuddy-hovered: #203D58;
 
 $markthai-color: rgba(242, 227, 170, 0.95);
 $markthai-hovered: #E5C445;
