added new pict to about

--- a/css/about.scss
+++ b/css/about.scss
@@ -83,7 +83,7 @@
 
     .carousel {
       overflow: hidden;
-      transform-style: preserve-3d;
+      // transform-style: preserve-3d;
     }
 
     .carousel-photo {
