--- a/css/living-sustainability.scss
+++ b/css/living-sustainability.scss
@@ -97,6 +97,21 @@ footer span {
 .mt-64 {
   margin-top: 64px;
 }
+.cg-4 {
+  column-gap: 4px;
+}
+.cg-8 {
+  column-gap: 8px;
+}
+.cg-12 {
+  column-gap: 12px;
+}
+.cg-16 {
+  column-gap: 16px;
+}
+.cg-20 {
+  column-gap: 20px;
+}
 
 // Margin top 64px for desktop, 32px for mobile
 .mt-d-64-m-32 {
@@ -359,6 +374,15 @@ p, .formative-study ul li, .iteration-container ul li, .showcase-li {
     }
   }
 
+}
+
+.chrome-web {
+  background-color: #F2F2F2;
+  justify-content: center;
+  display: inline-block;
+  // t, r, b, l
+  padding: 4px 20px 4px 20px;
+  text-decoration: none;
 }
 
 /* ? Breakpoint for large screen */
